<resources>
    <string name="app_name">FootPrint</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="providers">
        <item>GPS</item>
        <item>Sieć komórkowa / WiFi</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_track_choose">TrackChooseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_track_list">TrackList</string>
    <string name="title_activity_maps">Map</string>
    <string name="nowa_trasa">Nowa trasa</string>
    <string name="nazwa">Nazwa</string>
    <string name="ok">OK</string>
    <string name="anuluj">Anuluj</string>
    <string name="edytuj_tras">Edycja trasy</string>
    <string name="settings_label_frequency">Częstotliwość pomiaru [s]</string>
    <string name="settings_label_min_step">Minimalna różnica pomiaru [m]</string>
    <string name="clear">Clear</string>
    <string name="settings">Ustawienia</string>
    <string name="error">Error</string>
    <string name="rand">Rand</string>
    <string name="nawiguj_do">Nawiguj do</string>
    <string name="poka_wi_cej_tras">Pokaż więcej tras</string>
    <string name="settings_label_frequency_2">Częstotliwość pomiaru [min]</string>
    <string name="settings_label_drawcircles">Rysuj punkty</string>
    <string name="heightchart">HeightCHart</string>
    <string name="settings_label_max_step">Maksymalna różnica pomiaru [m]</string>
    <string name="toggleServiceButtonText_whenOff">Włącz</string>
    <string name="toggleServiceButtonText_whenOn">Wyłącz</string>
    <string name="draw_circles_tooltip">Dodatkowo rysuje na mapie wizualizacje punktów</string>
    <string name="setting_provider_label">Tryb lokalizacji</string>
    <string name="setting_provider_tooltip">GPS jest dokładniejszy, można wykorzystać sieć komórkową lub WiFi, ale działa to z mniejszą dokładnością</string>
    <string name="gps">GPS</string>
    <string name="network">Sieć</string>
    <string name="label_settings_show_notifications">Wyświetlaj powiadomienie za każdym razem, gdy nowy punkt zostanie zarejestrowany</string>
    <string name="settings_show_notifications">Pokazuj powiadomienia</string>
</resources>
