<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nwaah.trk.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/settings_label_frequency_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_label_frequency_minutes" />

                <EditText
                    android:text="0"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_frequency_value_minutes"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_frequency_bar_minutes"
                    android:max="3600" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/settings_label_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_label_frequency_seconds" />

                <EditText
                    android:text="0"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_frequency_value_seconds"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_frequency_bar_seconds"
                    android:max="60" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/settings_label_min_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_label_min_step" />

                <EditText
                    android:text="0"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_min_step_value"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_min_step_bar"
                    android:max="1000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/settings_label_max_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_label_max_step" />

                <EditText
                    android:text="0"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_max_step_value"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_max_step_bar"
                    android:max="1000" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_label_drawcircles"/>
                <TextView
                    android:text="@string/draw_circles_tooltip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/settings_draw_circles"
                    android:text="@string/settings_label_drawcircles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/setting_provider_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/setting_provider_tooltip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:text="@string/gps"
                        android:id="@+id/provider_GPS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:text="@string/network"
                        android:id="@+id/provider_Network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clear"/>

            <Button
                android:text="@string/rand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addRandomPoint"/>

            <Button
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_save"
                android:onClick="saveSettings"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
